deploy/k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stratum-frontend
spec:
  type: ClusterIP
  selector:
    app: stratum-frontend
  ports:
    - port: 80
      targetPort: http
      name: http
